Fix scrollbar of previews

--- a/src/app/components/data-preview/data-preview.component.scss
+++ b/src/app/components/data-preview/data-preview.component.scss
@@ -8,5 +8,7 @@
   pre {
     font-size: 0.8em;
     color: #fff;
+    overflow: visible;
+    margin: 0;
   }
 }
